--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,15 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "google-auth-library": "^10.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "razorpay": "^2.9.6"
   }
 }
